# legal-research-ai-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/agents/: critic.py  graph_agent.py  scholar.py  state.py
app/models/: research.py
app/routers/: case_summary.py  ingest.py  research.py
app/services/: cache.py  embeddings.py  graph.py  retrieval.py
app/utils/: chunker.py  token_counter.py
