[project]
name = "legal-research-ai-agent"
version = "0.1.0"
description = "AI-powered legal research agent with GraphRAG, multi-agent debate loop, and hallucination filtering for accurate answers across large legal document corpora"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "openai>=1.30.0",
    "langgraph>=0.1.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "pinecone>=3.0.0",
    "neo4j>=5.19.0",
    "redis>=5.0.0",
    "pypdf>=4.2.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    "langsmith>=0.1.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"